@@ -15,6 +15,9 @@
 
 	Fixed :hideui not hiding anything on Windows.  Thanks to Ed Pavlov.
 
+	Fixed segfaults on changing sibling directory or previewing directories in
+	miller view while global sorting by groups is active.  Patch by filterfalse.
+
 0.12.1 to 0.13-beta (2023-03-17)
 
 	Changed implementation of `:compare grouppaths` to juxtapose only files
